@@ -2,6 +2,9 @@ Changes in mirt 0.8.3
 
 NEW FEATURES
 
+- total.info logical added to iteminfo() to return either total item information or information 
+  from each category
+
 - MH-RM algorithm now accessible by passing mirt(..., method = 'MHRM'), and confmirt() function 
   removed completely. confmirt.model() also renamed to mirt.model()
 
